--- a/assets/sass/3_sections/_clients.scss
+++ b/assets/sass/3_sections/_clients.scss
@@ -16,10 +16,12 @@
     font-size: 19px;
     font-weight: 300;
     line-height: 26px;
-    margin: 0 0 40px;
+    margin: 0;
   }
 
   .hestia-testimonials-content {
+
+    margin: 30px 0 0;
 
     .row:nth-of-type(2n+1) {
 
@@ -96,7 +98,5 @@
       -moz-box-shadow: 0 12px 19px -7px rgba( 0, 0, 0, 0.3 );
       box-shadow: 0 12px 19px -7px rgba( 0, 0, 0, 0.3 );
     }
-
-  }
-
+  } /* End of .hestia-team-content */
 }
