--- a/assets/sass/3_sections/_features.scss
+++ b/assets/sass/3_sections/_features.scss
@@ -21,36 +21,40 @@
     font-size: 19px;
     font-weight: 300;
     line-height: 26px;
-    margin: 0 0 5px;
+    margin: 0;
   }
 
-  .hestia-info {
+  .hestia-features-content {
 
-    text-align: center;
-    padding: 30px 0 30px;
-    margin: 0 auto;
+    margin: 30px;
 
-    .info-title {
-      color: $color-secondary;
-      font-family: inherit;
-      font-size: 23px;
-      font-weight: 300;
-      line-height:27px;
-      margin: 15px 0;
+    .hestia-info {
+
+      text-align: center;
+      padding: 30px 0 30px;
+      margin: 0 auto;
+
+      .info-title {
+        color: $color-secondary;
+        font-family: inherit;
+        font-size: 23px;
+        font-weight: 300;
+        line-height:27px;
+        margin: 15px 0;
+      }
+
+      p {
+        color: #9A9A9A;
+        font-family: inherit;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 22px;
+        margin: 0 0 5px;
+      }
+
+      .icon > i {
+        font-size: 48px;
+      }
     }
-
-    p {
-      color: #9A9A9A;
-      font-family: inherit;
-      font-size: 15px;
-      font-weight: 300;
-      line-height: 22px;
-      margin: 0 0 5px;
-    }
-
-    .icon > i {
-      font-size: 48px;
-    }
-  }
-
+  } /* End of .hestia-features-content */
 }
