--- a/assets/sass/3_sections/_products.scss
+++ b/assets/sass/3_sections/_products.scss
@@ -20,72 +20,77 @@ section.products {
     font-size: 19px;
     font-weight: 300;
     line-height: 26px;
-    margin: 0 0 5px;
+    margin: 0;
   }
 
-  .card-product {
-    background: transparent;
+  .hestia-shop-content {
 
-    .content .card-title {
-      color: $color-secondary;
-    }
+    margin: 0;
 
-    .content .footer .stats .tooltip .tooltip-arrow:before {
-      border-top: 11px solid #FFFFFF;
-      border-left: 11px solid transparent;
-      border-right: 11px solid transparent;
-      left: -8px;
-      right: auto;
-      top: -12px;
-      margin-left: -3px;
-      content: "";
-      border-width: 10px 11px 0;
-      border-top-color: #fff;
-      position: absolute;
-    }
-    .content .footer .stats .tooltip .tooltip-arrow {
-      border-top: 11px solid rgba(0, 0, 0, 0.2);
-      border-left: 11px solid transparent;
-      border-right: 11px solid transparent;
-      right: auto;
-      margin-right: 0;
-      top: 43px;
-      position: absolute;
-      display: block;
-      width: 5px;
-      height: 5px;
-      bottom:0;
-    }
-    .content .footer .stats .tooltip .tooltip-inner {
-      background-color: #FFFFFF;
-      border-radius: 4px;
-      box-shadow: 0 1px 13px rgba(0, 0, 0, 0.14), 0 0 0 1px rgba(115, 71, 38, 0.23);
-      color: #66615B;
-      max-width: 200px;
-      padding: 10px 10px;
-      text-align: center;
-      text-decoration: none;
-    }
-    .content .footer .stats {
-      z-index: 100;
-    }
-  }
+    .card-product {
+      background: transparent;
 
-  .shop-item:hover > .card > .card-image {
-    @include no-box-shadow();
-    @include no-transform();
-    opacity: .75;
-  }
+      .content .card-title {
+        color: $color-secondary;
+      }
 
-  .shop-item .card .card-image {
-    @include no-box-shadow();
-
-    a {
-      @include no-box-shadow();
-
-      img {
-        @include no-box-shadow();
+      .content .footer .stats .tooltip .tooltip-arrow:before {
+        border-top: 11px solid #FFFFFF;
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        left: -8px;
+        right: auto;
+        top: -12px;
+        margin-left: -3px;
+        content: "";
+        border-width: 10px 11px 0;
+        border-top-color: #fff;
+        position: absolute;
+      }
+      .content .footer .stats .tooltip .tooltip-arrow {
+        border-top: 11px solid rgba(0, 0, 0, 0.2);
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        right: auto;
+        margin-right: 0;
+        top: 43px;
+        position: absolute;
+        display: block;
+        width: 5px;
+        height: 5px;
+        bottom:0;
+      }
+      .content .footer .stats .tooltip .tooltip-inner {
+        background-color: #FFFFFF;
+        border-radius: 4px;
+        box-shadow: 0 1px 13px rgba(0, 0, 0, 0.14), 0 0 0 1px rgba(115, 71, 38, 0.23);
+        color: #66615B;
+        max-width: 200px;
+        padding: 10px 10px;
+        text-align: center;
+        text-decoration: none;
+      }
+      .content .footer .stats {
+        z-index: 100;
       }
     }
-  }
+
+    .shop-item:hover > .card > .card-image {
+      @include no-box-shadow();
+      @include no-transform();
+      opacity: .75;
+    }
+
+    .shop-item .card .card-image {
+      @include no-box-shadow();
+
+      a {
+        @include no-box-shadow();
+
+        img {
+          @include no-box-shadow();
+        }
+      }
+    }
+  } /* End of .hestia-shop-content */
 }
