--- a/assets/sass/3_sections/_team.scss
+++ b/assets/sass/3_sections/_team.scss
@@ -12,94 +12,101 @@
     min-height: 32px;
   }
 
-  .description {
+  h5.description {
     color: #9A9A9A;
     font-family: inherit;
     font-size: 19px;
     font-weight: 300;
     line-height: 26px;
-    margin: 0 0 8px;
+    margin: 0;
   }
 
-  .card {
+  .hestia-team-content {
 
-    margin: 30px 0 20px;
-    text-align: center;
+    margin: 30px 0 0;
 
-    .col-md-5 {
+    .card {
 
-      float: none;
+      margin: 30px 0 20px;
       text-align: center;
-      margin: 0 auto;
-      width: auto;
-      
-      .card-image {
-        display: block;
-        width: 120px;
-        height: 120px;
+
+      .col-md-5 {
+
+        float: none;
+        text-align: center;
         margin: 0 auto;
-        @include border-radius(50%);
-        @include no-box-shadow();
+        width: auto;
 
-        img {
+        .card-image {
+          display: block;
+          width: 120px;
+          height: 120px;
+          margin: 0 auto;
+          @include border-radius(50%);
           @include no-box-shadow();
-          @include border-radius(12px);
-          max-width: 100%;
-          height: auto;
+
+          img {
+            @include no-box-shadow();
+            @include border-radius(12px);
+            max-width: 100%;
+            height: auto;
+          }
         }
       }
-    }
 
-    .col-md-7 {
+      .col-md-7 {
 
-      float: none;
-      text-align: center;
-      margin: 0 auto;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      width: auto;
-    }
-
-    .content {
-
-      .card-title {
-        color: $color-secondary;
-        font-family: inherit;
-        font-size: 22px;
-        font-weight: 300;
-        line-height: 26px;
-        margin: 5px 0 0;
+        float: none;
+        text-align: center;
+        margin: 0 auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: auto;
       }
 
-      .category {
-        color: #868e96;
-        font-family: inherit;
-        font-size: 12px;
-        font-weight: 600;
-        line-height:18px;
-        margin: 5px 0;
-      }
+      .content {
 
-      .card-description {
-        color: #9A9A9A;
-        font-family: inherit;
-        font-size: 15px;
-        font-weight: 300;
-        line-height: 22px;
-        margin: 15px 0 5px;
-      }
-
-      .footer {
-
-        a.btn {
-          opacity: 0.8;
+        .card-title {
+          color: $color-secondary;
+          font-family: inherit;
+          font-size: 22px;
+          font-weight: 300;
+          line-height: 26px;
+          margin: 5px 0 0;
         }
-        a.btn:hover {
-          opacity: 0.65;
+
+        .category {
+          color: #868e96;
+          font-family: inherit;
+          font-size: 12px;
+          font-weight: 600;
+          line-height:18px;
+          margin: 5px 0;
+        }
+
+        .card-description {
+          color: #9A9A9A;
+          font-family: inherit;
+          font-size: 15px;
+          font-weight: 300;
+          line-height: 22px;
+          margin: 15px 0 5px;
+        }
+
+        .footer {
+
+          a.btn {
+            opacity: 0.8;
+          }
+          a.btn:hover {
+            opacity: 0.65;
+          }
         }
       }
-    }
 
-  }
+    }
+  } /* End of .hestia-team-content */
+
+
 }
 
